# citrus-engine

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .readthedocs-setup.md  .readthedocs.yml  AGENTS.md  CMakeLists.txt  CMakePresets.json  CODE_STYLE_GUIDE.md  DOCUMENTATION_APPROACHES.md  Doxyfile  Makefile  README.md  TESTING.md  UI_DEVELOPMENT_BIBLE.md  mkdocs.yml  package-lock.json  vcpkg.json
editor/: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
editor/assets/: Camera.prefab.json  Chime.prefab.json  README.md  animation.json  data_table.json  data_table2.csv  graph.json  sound_preset.sfx.json  sprites.json  sprites2.json  texture_test.proctex.json  tileset.json  tree.bt.json
editor/assets/scenes/: cube-3d-safe.json
editor/assets/shaders/: basic.frag  basic.vert  colored_2d.frag  colored_2d.vert  ui_batch.frag  unlit.frag  unlit.vert
editor/include/: animation_editor_panel.h  asset_browser_panel.h  asset_editor_registry.h  asset_preview_registry.h  behavior_tree_editor_panel.h  code_editor_panel.h  command.h  data_table_editor_panel.h  debug-ui.h  editor_asset_scanner.h  editor_callbacks.h  editor_panel.h  editor_scene.h  editor_utils.h  field_widgets.h  file_dialog.h  file_utils.h  graph_editor_panel.h  grid_utils.h  hierarchy_panel.h  material_editor_panel.h  properties_panel.h  shader_editor_panel.h  sound_editor_panel.h  sprite_editor_panel.h  texture_editor_panel.h  tileset_editor_panel.h  viewport_panel.h
editor/include/commands/: clipboard_commands.h  compound_command.h  entity_commands.h  prefab_command.h  property_command.h  transform_command.h
editor/src/: animation_editor_panel.cpp  asset_browser_dialogs.cpp  asset_browser_panel.cpp  asset_browser_scanning.cpp  asset_editor_registry.cpp  asset_preview_registry.cpp  behavior_tree_editor_panel.cpp  code_editor_panel.cpp  command.cpp  data_table_editor_panel.cpp  editor_asset_scanner.cpp  editor_scene.cpp  editor_scene_clipboard.cpp  editor_scene_file_ops.cpp  editor_scene_menus.cpp  field_widgets.cpp  graph_editor_panel.cpp  hierarchy_panel.cpp  main.cpp  material_editor_panel.cpp  properties_panel.cpp  shader_editor_panel.cpp  sound_editor_panel.cpp  sprite_editor_panel.cpp  texture_editor_eval.cpp  texture_editor_export.cpp  texture_editor_panel.cpp  tileset_editor_panel.cpp  viewport_camera.cpp  viewport_gizmos.cpp  viewport_panel.cpp
editor/src/commands/: clipboard_commands.cpp
examples/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
examples/assets/: README.md
examples/assets/scenes/: cube-3d.json
examples/assets/shaders/: colored_2d.vert  colored_3d.frag  colored_3d.vert  ui_batch.frag  ui_batch.vert
examples/include/: debug-ui.h  engine_scene_adapter.h  example_scene.h  scene_registry.h  scene_switcher.h  ui_debug_visualizer.h  ui_element_inspector.h
examples/src/: cube_3d_scene.cpp  data_asset_scene.cpp  example_scene.cpp  main.cpp  scene_management_scene.cpp  scene_registry.cpp  scene_switcher.cpp  triangle_2d_scene.cpp  ui_component_scene.cpp  ui_image_scene.cpp  ui_showcase_scene.cpp
src/engine/: CMakeLists.txt  engine.cpp  engine.cppm
src/engine/ai/: ai.cppm  behavior_tree.cpp  behavior_tree.cppm  blackboard.cppm
src/engine/animation/: animation.cppm  animation_clip.cpp  animation_clip.cppm  animation_serializer.cpp  animation_serializer.cppm  animation_state.cpp  animation_state.cppm  animation_system.cpp  animation_system.cppm  animator.cppm
src/engine/assets/: asset_manager.cpp  asset_manager.cppm  asset_registry.cpp  asset_registry.cppm  assets.cppm  material_asset.cpp  mesh_asset.cpp  other_assets.cpp  shader_asset.cpp  sound_asset.cpp  tileset.cpp  tileset.cppm
src/engine/audio/: audio.cppm  audio_clip.cppm  audio_listener.cppm  audio_source.cppm  audio_system.cpp  audio_system.cppm
src/engine/capture/: capture.cpp  capture.cppm
src/engine/components/: components.cppm
src/engine/data/: data.cppm  data_asset.cppm  data_asset_registry.cppm  data_serializer.cpp  data_serializer.cppm  data_table.cppm
src/engine/ecs/: component_registry.cpp  component_registry.cppm  ecs_render.cpp  ecs_systems.cpp  ecs_transform.cpp  ecs_world.cpp  flecs_ecs.cppm  transform_system.cpp
src/engine/graph/: graph.cppm  graph_evaluator.cpp  graph_evaluator.cppm  graph_serializer.cpp  graph_serializer.cppm  node_graph.cpp  node_graph.cppm  node_type_registry.cpp  node_type_registry.cppm  types.cpp  types.cppm
src/engine/input/: input.cpp  input.cppm
src/engine/os/: os.cpp  os.cppm
src/engine/physics/: bullet3_backend.cpp  bullet3_debug_renderer.cpp  bullet3_module.cpp  jolt_backend.cpp  jolt_debug_renderer.cpp  jolt_module.cpp  physics_backend.cppm  physics_components.cppm  physics_debug_renderer.cppm  physics_factory.cpp  physics_system.cppm  physics_types.cppm  physx_backend.cpp
src/engine/platform/: file_system.cpp  memory.cpp  platform.cpp  platform.cppm  timing.cpp
src/engine/rendering/: framebuffer.cpp  framebuffer.cppm  material.cpp  material.cppm  mesh.cpp  mesh.cppm  render_system.cppm  renderer.cpp  renderer.cppm  rendering.cppm  shader.cpp  shader.cppm  texture.cpp  texture.cppm  tilemap_renderer.cpp  tilemap_renderer.cppm  types.cppm
src/engine/scene/: prefab.cpp  prefab.cppm  scene.cppm  scene_assets.cpp  scene_assets.cppm  scene_manager.cpp  scene_serializer.cpp  scene_serializer.cppm
src/engine/scripting/: angelscript_backend.cpp  lua_backend.cpp  scripting_backend.cppm  scripting_factory.cpp  scripting_system.cppm
src/engine/ui/: batch_renderer.cppm  builder.cppm  descriptor.cppm  event_binding.cppm  factory.cppm  factory_registry.cppm  json_serializer.cppm  mouse_event.cppm  mouse_event_manager.cppm  renderer.cpp  renderer.cppm  text.cppm  text_renderer.cpp  text_renderer.cppm  types.cppm  ui.cppm  ui_element.cppm
src/engine/ui/batch_renderer/: batch_renderer.cpp  batch_renderer.cppm  batch_renderer.h  batch_types.cppm  (+1 more)
templates/game-project/: CMakeLists.txt  CMakePresets.json  README.md  project.json  vcpkg.json
templates/game-project/src/: main.cpp
(+181 files in other folders)
